Homework 5 Comments form Nikola

--- a/L5_24_03/CSS/HW-L5-STYLE-NEW.css
+++ b/L5_24_03/CSS/HW-L5-STYLE-NEW.css
@@ -1,3 +1,4 @@
+/* --- Това е по-скоро въпрос на стил на писане, но бих ти препоръчал да затваряш къдравата скоба на същото ниво, както е селектора. Прави кода по-лесен за четене --- */
 body{
     background-color: #34495e;
     font-family: "Verdana";
