--- a/L6_25_03/css/HW-L6_page1_style.css
+++ b/L6_25_03/css/HW-L6_page1_style.css
@@ -1,7 +1,8 @@
 main {
-    padding-left: 80px;
-    padding-right: 100px;
-    padding-top: 60px; 
+    /* --- Можеш да замениш трите реда само с един, както и няма нужда да слагаш фиксирани пиксели от ляво и дяано, просо сложи половината от това което си оставила за широчината
+        100% - 88% = 12%, което означава по 6% на страна.
+        Така, ще си подсигуриш, че каквато и да резолюцията на устройството на потребителя, винаги ще изглежда добре. --- */
+    padding: 60px 6% 0 6%;
     z-index: -1;
     width:88%;
 
@@ -78,6 +79,7 @@ ol {
     width: 500px;
 }
 
+/* --- Харесва ми, че си се сетила за този ефект --- */
 #needBG:hover {
     opacity: 1;
 }
